@@ -1,5 +1,9 @@
 ChangeLog for Set-Infinite
 
+2005-07-26
+
+* added "iterator()" and "lazy()" iterators
+
 2005-07-24
 
 * added iterator()
